# PythonInUnderwear

./: .gitignore  LICENSE  README.md  __init__.py  app.py  example_app.py  helpers.py  middleware.py  pyproject.toml  routing.py  serving.py  static.py  wrappers.py
piu/: __init__.py  __main__.py  app.py  auth.py  cache.py  cli.py  config.py  cors.py  csrf.py  database.py  logging.py  middleware.py  openapi.py  plugins.py  ratelimit.py  routing.py  serving.py  sessions.py  static.py  tasks.py  templating.py  testing.py  uploads.py  validation.py  websocket.py
templates/: index.html
tests/: test_piu.py
