[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-in-underwear"
version = "0.6.0"
description = "A lightweight, Flask-inspired web framework for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
templates  = ["jinja2>=3.0"]
sessions   = ["cryptography>=41.0"]
dev        = ["watchdog>=3.0", "jinja2>=3.0", "pytest>=7.0"]
yaml       = ["pyyaml>=6.0"]
db         = ["sqlalchemy>=2.0", "aiosqlite>=0.19"]
db-pg      = ["sqlalchemy>=2.0", "asyncpg>=0.29"]
db-mysql   = ["sqlalchemy>=2.0", "aiomysql>=0.2"]
full       = [
    "jinja2>=3.0",
    "watchdog>=3.0",
    "pyyaml>=6.0",
    "pytest>=7.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
]

[project.scripts]
piu = "piu.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["piu*"]